tests/neg/tracked.check
-- Error: tests/neg/tracked.scala:2:16 ---------------------------------------------------------------------------------
2 |class C(tracked x: Int) // error
  |                ^
  |                `val` or `var` expected
-- [E040] Syntax Error: tests/neg/tracked.scala:7:18 -------------------------------------------------------------------
7 |  def foo(tracked a: Int) = // error
  |                  ^
  |                  ':' expected, but identifier found
-- Error: tests/neg/tracked.scala:20:25 --------------------------------------------------------------------------------
20 |  given g2: (tracked val x: Int) => C = C(x) // error
   |             ^^^^^^^^^^^^^^^^^^
   |             method parameter x may not be a `val`
-- Error: tests/neg/tracked.scala:4:21 ---------------------------------------------------------------------------------
4 |class C2(tracked var x: Int) // error
  |                     ^
  |                     mutable variables may not be `tracked`
-- [E156] Syntax Error: tests/neg/tracked.scala:8:16 -------------------------------------------------------------------
8 |    tracked val b: Int = 2 // error
  |    ^^^^^^^^^^^^^^^^^^^^^^
  |    Modifier tracked is not allowed for this definition
-- [E156] Syntax Error: tests/neg/tracked.scala:11:17 ------------------------------------------------------------------
11 |  tracked object Foo // error
   |  ^^^^^^^^^^^^^^^^^^
   |  Modifier tracked is not allowed for this definition
-- [E156] Syntax Error: tests/neg/tracked.scala:17:15 ------------------------------------------------------------------
17 |  tracked type T = Int // error
   |  ^^^^^^^^^^^^^^^^^^^^
   |  Modifier tracked is not allowed for this definition
